# djene

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
djene/: __init__.py  djene.py  queryset.py
tests/: test_queryset.py
