[tool.poetry]
name = "djene"
version = "0.0.1"
description = "Djene: Inject a Django Gene Into Your SQLModel"
authors = ["rfzee <rfzee@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.18"
loguru = "^0.7.2"
pydantic = "^2.7.4"
fastapi = "^0.111.0"
starlette = "^0.37.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
